# zundamon_discord_bot

./: .gitignore  Cargo.toml  README.md
src/: core.rs  discord_bot_connector.rs  main.rs  voicevox_tts.rs
