[package]
name = "zunda_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
unicode-normalization = "0.1"
regex = "1.5.5"
once_cell = "1.10.0"
rand = "0.8.5"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
